[package]
name = "donut"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "donut-server"

[dependencies]
mlua = { version = "0.9.9", features = ["lua54", "async", "macros", "serialize", "vendored"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
uuid = { version = "1.8.0", features = ["v7"] }
